force-app/main/default/objects/Payments__c/Payments__c.object-meta.xml
<CustomObject>
    <description>Passenger&apos;s payment information</description>
    <label>Payment</label>
    <nameField>
        <displayFormat>PID-{000}</displayFormat>
        <label>Payments Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>