force-app/main/default/objects/Payments__c/fields/Date_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Payment__c</fullName>
    <description>Passenger&apos;s amount paid date</description>
    <label>Date of Payment</label>
    <type>Date</type>
</CustomField>