force-app/main/default/objects/Payments__c/fields/Invoice_number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_number__c</fullName>
    <description>Passenger&apos;s invoice details</description>
    <displayFormat>Inv-{000}</displayFormat>
    <label>Invoice number</label>
    <type>AutoNumber</type>
</CustomField>