force-app/main/default/objects/Payments__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <description>Passenger&apos;s payment mode</description>
    <label>Payment Mode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>